src/test/deca/syntax/invalid/lexer/lexer_circular_include.deca
// Description:
//    test du parser pour les identificateurs
//    vérifie qu'aucun identificateur ne commence par un nombre
//
// Resultats:
// inclusion circulaire
// Ligne <9> : <Circular include for fichier.java>

#include "lexer_circular_include2.deca"
